--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="confirm_desc">Te hemos enviado un email a %s para verificar tu cuenta, así podrás usar todas las opciones de la app.</string>
     <string name="cannot_get_email">No pudimos obtener el email :(</string>
     <string name="category">categoría</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
