Extraer recursos de strings en pantalla de signup para ser utilizados posteriormente en UI tests
Presentar errores de validacion en cada input del form de signup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="photo">foto</string>
     <string name="ver_ubicacion_en_mapa">Ver ubicación en mapa</string>
     <string name="location_request">Favor brindanos permiso de ubicacion para presentarte la ruta en el mapa</string>
+    <string name="fullname_error">Favor ingresa tu nombre completo :)</string>
+    <string name="email_error">Favor ingresa tu email :)</string>
 </resources>
